--- a/src/index.css
+++ b/src/index.css
@@ -208,3 +208,10 @@ html {
   color: #e60064;
 }
 
+.boton-paypal {
+  background-color: #FFC439;
+  padding: 4px 35px 4px 35px;
+  border-radius: 18px;
+  border: 2px solid #E6B033;
+  font-weight: bold;
+}
