--- a/src/index.css
+++ b/src/index.css
@@ -210,8 +210,10 @@ html {
 
 .boton-paypal {
   background-color: #FFC439;
-  padding: 4px 35px 4px 35px;
+  width: 150px;
+  padding: 6px 35px 6px 35px;
   border-radius: 18px;
   border: 2px solid #E6B033;
   font-weight: bold;
+  font-size: 18px;
 }
